# greentechhub-ui

./: .dockerignore  .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: accessibility.md  architecture.md  components.md  contract.md  extensibility.md  migration.md  testing.md  theming.md  versioning.md
playground/: README.md  app.py
playground/templates/: _form_demo.html  _pagination_list.html  _tasks_tbody.html  index.html
src/greentechhub_ui/: __init__.py  navigation.py  toast.py
src/greentechhub_ui/components/: card.html  empty_state.html  form.html  navbar.html  pagination.html  stat_card.html  table.html  theme_toggle.html  toast.html
src/greentechhub_ui/static/js/: theme-toggle.js  toast.js
src/greentechhub_ui/templates/: app.html
src/greentechhub_ui/theme/: __init__.py  theme.css  tokens.py
tests/: test_app_shell_renders.py  test_html_validity.py  test_macros_snapshot.py  test_navigation.py  test_playground_smoke.py
tests/e2e/: conftest.py  test_playground.py
tests/snapshots/: card.html  empty_state.html  empty_state_with_action.html  form_field_with_errors.html  form_field_with_help.html  form_no_error.html  form_with_banner_error.html  navbar_with_icons.html  navbar_with_theme_toggle.html  pagination_with_next.html  stat_card.html  stat_card_value_tone.html  stat_card_with_icon.html  table_empty.html  table_with_rows.html  theme_toggle.html  toast_flashes_with_items.html
