# pyproject.toml
[project]
name = "greentechhub-ui"
version = "0.1.0"
description = "Shared UI framework for the GreenTechHub ecosystem"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "html5lib>=1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greentechhub_ui"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
